--- a/index.html
+++ b/index.html
@@ -63,6 +63,32 @@
 
     <!-- ==== Main ==== -->
     <main class="main" id="main">
+        <!-- ==== Home ==== -->
+        <section class="home section" id="home">
+            <div class="home_container container grid">
+                <div class="home_data">
+                    <span class="home_greeting">Hello, I'm</span>
+                    <h1 class="home_name">AnDev, Afifudin Nurfalah</h1>
+                    <h3 class="home_education">Fullstack Developer</h3>
+                </div>
+                <div class="home_buttons">
+                    <a href="pdf/Ansel-Cv.pdf" class="button button-ghost">Download CV</a>
+                    <a href="#about" class="about">About Me</a>
+                </div>
+                <div class="home_handle">
+                    <img src="" alt="" class="home_img">
+                </div>
+            </div>
+        </section>
+        
+        <!-- ==== About ==== -->
+        <section class="about section" id="about"></section>
+
+        <!-- ==== Skills ==== -->
+        <section class="skills section" id="skills"></section>
+
+        <!-- ==== Services ==== -->
+        <section class="services section" id="services"></section>
 
     </main>
     
