--- a/index.html
+++ b/index.html
@@ -76,8 +76,24 @@
                     <a href="#about" class="about">About Me</a>
                 </div>
                 <div class="home_handle">
-                    <img src="" alt="" class="home_img">
+                    <img src="img/meto3.png" alt="" class="home_img">
                 </div>
+                <div class="home_social">
+                    <a href="" class="home_social-link">
+                        <i class='bx bxl-linkedin-square'></i>
+                    </a>
+                    <a href="" class="home_social-link">
+                        <i class='bx bxl-github'></i>
+                    </a>
+                    <a href="" class="home_social-link">
+                        <i class='bx bxl-instagram-alt'></i>
+                    </a>
+                </div>
+
+                <a href="#about" class="home_scroll">
+                    <i class='bx bxs-mouse home_scroll-icon'></i>
+                    <span class="home_scroll-name">Scroll Down</span>
+                </a>
             </div>
         </section>
         
