--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="home_container container grid">
                 <div class="home_data">
                     <span class="home_greeting">Hello, I'm</span>
-                    <h1 class="home_name">AnDev, Afifudin Nurfalah</h1>
+                    <h1 class="home_name">Afifudin Nurfalah</h1>
                     <h3 class="home_education">Fullstack Developer</h3>
                 </div>
                 <div class="home_buttons">
@@ -76,7 +76,7 @@
                     <a href="#about" class="about">About Me</a>
                 </div>
                 <div class="home_handle">
-                    <img src="img/meto3.png" alt="" class="home_img">
+                    <img src="img/meto3.png" class="home_img">
                 </div>
                 <div class="home_social">
                     <a href="" class="home_social-link">
@@ -89,7 +89,7 @@
                         <i class='bx bxl-instagram-alt'></i>
                     </a>
                 </div>
-
+                
                 <a href="#about" class="home_scroll">
                     <i class='bx bxs-mouse home_scroll-icon'></i>
                     <span class="home_scroll-name">Scroll Down</span>
