--- a/index.html
+++ b/index.html
@@ -70,10 +70,11 @@
                     <span class="home_greeting">Hello, I'm</span>
                     <h1 class="home_name">Afifudin Nurfalah</h1>
                     <h3 class="home_education">Fullstack Developer</h3>
-                </div>
-                <div class="home_buttons">
-                    <a href="pdf/Ansel-Cv.pdf" class="button button-ghost">Download CV</a>
-                    <a href="#about" class="about">About Me</a>
+
+                    <div class="home_buttons">
+                        <a download="" href="pdf/Ansel-Cv.pdf" class="button button-ghost">Download CV</a>
+                        <a href="#about" class="about">About Me</a>
+                    </div>
                 </div>
                 <div class="home_handle">
                     <img src="img/meto3.png" class="home_img">
