--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                     <div class="home_buttons">
                         <a download="" href="pdf/Ansel-Cv.pdf" class="button button-ghost">Download CV</a>
-                        <a href="#about" class="about">About Me</a>
+                        <a href="#about" class="button">About Me</a>
                     </div>
                 </div>
                 <div class="home_handle">
