--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- CSS Style -->
     <link rel="stylesheet" href="css/style.css">
     
-    <title>AnDev</title>
+    <title></title>
 </head>
 <body>
     <!-- ==== Header ==== -->
@@ -72,12 +72,12 @@
                     <h3 class="home_education">Fullstack Developer</h3>
 
                     <div class="home_buttons">
-                        <a download="" href="pdf/Ansel-Cv.pdf" class="button button-ghost">Download CV</a>
+                        <a download="" href="pdf/Afifudin-Nurfalah-CV.pdf" class="button button-ghost">Download CV</a>
                         <a href="#about" class="button">About Me</a>
                     </div>
                 </div>
                 <div class="home_handle">
-                    <img src="img/meto3.png" class="home_img">
+                    <img src="img/profile-img.png" class="home_img">
                 </div>
                 <div class="home_social">
                     <a href="" class="home_social-link">
@@ -99,7 +99,42 @@
         </section>
         
         <!-- ==== About ==== -->
-        <section class="about section" id="about"></section>
+        <section class="about section" id="about">
+            <span class="section_subtitle">My Intro</span>
+            <h2 class="section_title">About Me</h2>
+
+            <div class="about_container container grid">
+                <img src="img/3.jpg" alt="" class="about_img">
+
+                <div class="about_data">
+                    <div class="about_info">
+                        <div class="about_box">
+                            <i class='bx bx-chevron-down-circle about_icon' ></i>
+                            <h3 class="about_title">Experience</h3>
+                            <span class="about_subtitle">3 Years</span>
+                        </div>
+                        <div class="about_box">
+                            <i class='bx bx-medal about_icon'></i>
+                            <h3 class="about_title">Completed</h3>
+                            <span class="about_subtitle">12+ Projects</span>
+                        </div>
+                        <div class="about_box">
+                            <i class='bx bx-support about_icon' ></i>
+                            <h3 class="about_title">Support</h3>
+                            <span class="about_subtitle">24/7 Online</span>
+                        </div>
+                    </div>
+
+                    <p class="about_description">
+                        <strong>AnDev</strong>, Fullstack Web Developer, 
+                        who is responsible for creating an attractive website appearance 
+                        as well as being responsible for the server and data side. 
+                        I have quite a lot of experience creating projects, especially websites.
+                    </p>
+                    <a href="#contact" class="button">Contact Me</a>
+                </div>
+            </div>
+        </section>
 
         <!-- ==== Skills ==== -->
         <section class="skills section" id="skills"></section>
