--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
                     </div>
 
                     <p class="about_description">
-                        <strong>AnDev</strong>, Fullstack Web Developer, 
-                        who is responsible for creating an attractive website appearance 
-                        as well as being responsible for the server and data side. 
-                        I have quite a lot of experience creating projects, especially websites.
+                        <strong>AnDev</strong>, Fullstack Web Developer. 
+                        I am responsible for creating an attractive website appearance. 
+                        And is responsible for the server and data side. 
+                        I have quite a lot of experience in creating projects, especially websites.
                     </p>
                     <a href="#contact" class="button">Contact Me</a>
                 </div>
