--- a/index.html
+++ b/index.html
@@ -72,21 +72,21 @@
                     <h3 class="home_education">Fullstack Developer</h3>
 
                     <div class="home_buttons">
-                        <a download="" href="pdf/Afifudin-Nurfalah-CV.pdf" class="button button-ghost">Download CV</a>
+                        <a download="" href="pdf/Afifudin-Resume.pdf" class="button button-ghost">Download CV</a>
                         <a href="#about" class="button">About Me</a>
                     </div>
                 </div>
                 <div class="home_handle">
-                    <img src="img/profile-img.png" class="home_img">
+                    <img src="img/2.png" class="home_img">
                 </div>
                 <div class="home_social">
-                    <a href="" class="home_social-link">
+                    <a href="https://www.linkedin.com/in/afifudin-nurfalah-30a80b222" class="home_social-link">
                         <i class='bx bxl-linkedin-square'></i>
                     </a>
-                    <a href="" class="home_social-link">
+                    <a href="https://github.com/afifudin23/" class="home_social-link">
                         <i class='bx bxl-github'></i>
                     </a>
-                    <a href="" class="home_social-link">
+                    <a href="https://www.instagram.com/affdn.nrflh23/" class="home_social-link">
                         <i class='bx bxl-instagram-alt'></i>
                     </a>
                 </div>
