--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="home_handle">
-                    <img src="img/5.png" class="home_img">
+                    <img src="img/profile.png" class="home_img">
                 </div>
                 <div class="home_social">
                     <a href="https://www.linkedin.com/in/afifudin-nurfalah-30a80b222" class="home_social-link">
@@ -104,7 +104,7 @@
             <h2 class="section_title">About Me</h2>
 
             <div class="about_container container grid">
-                <img src="img/3.jpg" alt="" class="about_img">
+                <img src="img/about.jpg" alt="" class="about_img">
 
                 <div class="about_data">
                     <div class="about_info">
@@ -137,7 +137,9 @@
         </section>
 
         <!-- ==== Skills ==== -->
-        <section class="skills section" id="skills"></section>
+        <section class="skills section" id="skills">
+            
+        </section>
 
         <!-- ==== Services ==== -->
         <section class="services section" id="services"></section>
