add services pt-1

--- a/index.html
+++ b/index.html
@@ -271,7 +271,54 @@
         </section>
 
         <!-- ==== Services ==== -->
-        <section class="services section" id="services"></section>
+        <section class="services section" id="services">
+            <span class="section_subtitle">My Service</span>
+            <h2 class="section_title">What I Offer</h2>
+
+            <div class="services_container container grid">
+                <div class="services_card">
+                    <h3 class="services_title">Product <br> Designer</h3>
+
+                    <span class="services_button">
+                        See more <i class='bx bx-right-arrow-alt services_icon'></i>
+                    </span>
+                </div>
+
+                <div class="services_card">
+                    <h3 class="services_title">API <br> Gateway</h3>
+
+                    <span class="services_button">
+                        See more <i class='bx bx-right-arrow-alt services_icon'></i>
+                    </span>
+
+                    <div class="service_modal">
+                        <div class="service_modal-contect">
+                            <i class='bx bx-x service_modal-close'></i>
+
+                            <h3 class="services_modal-title"></h3>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="services_card">
+                    <h3 class="services_title">Security <br> Guarenteed</h3>
+
+                    <span class="services_button">
+                        See more <i class='bx bx-right-arrow-alt services_icon'></i>
+                    </span>
+                </div>
+            </div>
+        </section>
+
+        <!-- ==== Work ==== -->
+        <section class="work section" id="work"></section>
+
+        <!-- ==== Testimonial ==== -->
+        <section class="testimonial section"></section>
+
+        <!-- ==== Contact ==== -->
+        <section class="contact section" id="contact"></section>
+
 
     </main>
     
