--- a/index.html
+++ b/index.html
@@ -448,7 +448,65 @@
         </section>
 
         <!-- ==== Work ==== -->
-        <section class="work section" id="work"></section>
+        <section class="work section" id="work">
+            <span class="section_subtitle">My Portfolio</span>
+            <h2 class="section_title">Recent Works</h2>
+
+            <div class="work_filters">
+                <div class="work_filters">All</div>
+                <div class="work_filters">Web</div>
+                <div class="work_filters">Movie</div>
+                <div class="work_filters">Design</div>
+            </div>
+
+            <div class="work_container container grid">
+                <div class="work_card">
+                    <img src="" alt="" class="work_img">
+
+                    <h3 class="work_title"></h3>
+
+                    <a href="#" class="work_button">
+                        Demo <i class='bx bx-right-arrow-alt work_icon'></i>
+                    </a>
+                </div>
+                <div class="work_card">
+                    <img src="" alt="" class="work_img">
+
+                    <h3 class="work_title"></h3>
+
+                    <a href="#" class="work_button">
+                        Demo <i class='bx bx-right-arrow-alt work_icon'></i>
+                    </a>
+                </div>
+                <div class="work_card">
+                    <img src="" alt="" class="work_img">
+
+                    <h3 class="work_title"></h3>
+
+                    <a href="#" class="work_button">
+                        Demo <i class='bx bx-right-arrow-alt work_icon'></i>
+                    </a>
+                </div>
+                <div class="work_card">
+                    <img src="" alt="" class="work_img">
+
+                    <h3 class="work_title"></h3>
+
+                    <a href="#" class="work_button">
+                        Demo <i class='bx bx-right-arrow-alt work_icon'></i>
+                    </a>
+                </div>
+                <div class="work_card">
+                    <img src="" alt="" class="work_img">
+
+                    <h3 class="work_title"></h3>
+
+                    <a href="#" class="work_button">
+                        Demo <i class='bx bx-right-arrow-alt work_icon'></i>
+                    </a>
+                </div>
+            </div>
+        </section>
 
         <!-- ==== Testimonial ==== -->
         <section class="testimonial section"></section>
