add work section pt-2

--- a/index.html
+++ b/index.html
@@ -453,53 +453,53 @@
             <h2 class="section_title">Recent Works</h2>
 
             <div class="work_filters">
-                <div class="work_filters">All</div>
-                <div class="work_filters">Web</div>
-                <div class="work_filters">Movie</div>
-                <div class="work_filters">Design</div>
+                <span class="work_item active_work" data-filter="all">All</span>
+                <span class="work_item" data-filter=".backend">Backend</span>
+                <span class="work_item" data-filter=".frontend">Frontend</span>
+                <span class="work_item" data-filter=".other">Other</span>
             </div>
 
-            <div class="work_container container grid">
-                <div class="work_card">
-                    <img src="" alt="" class="work_img">
+            <div class="work_container tester container grid">
+                <div class="work_card mix backend">
+                    <img src="img/work1.jpg" alt="" class="work_img">
 
-                    <h3 class="work_title"></h3>
-
-                    <a href="#" class="work_button">
-                        Demo <i class='bx bx-right-arrow-alt work_icon'></i>
-                    </a>
-                </div>
-                <div class="work_card">
-                    <img src="" alt="" class="work_img">
-
-                    <h3 class="work_title"></h3>
+                    <h3 class="work_title">Backend</h3>
 
                     <a href="#" class="work_button">
                         Demo <i class='bx bx-right-arrow-alt work_icon'></i>
                     </a>
                 </div>
-                <div class="work_card">
-                    <img src="" alt="" class="work_img">
+                <div class="work_card mix backend">
+                    <img src="img/work2.jpg" alt="" class="work_img">
 
-                    <h3 class="work_title"></h3>
-
-                    <a href="#" class="work_button">
-                        Demo <i class='bx bx-right-arrow-alt work_icon'></i>
-                    </a>
-                </div>
-                <div class="work_card">
-                    <img src="" alt="" class="work_img">
-
-                    <h3 class="work_title"></h3>
+                    <h3 class="work_title">Backend</h3>
 
                     <a href="#" class="work_button">
                         Demo <i class='bx bx-right-arrow-alt work_icon'></i>
                     </a>
                 </div>
-                <div class="work_card">
-                    <img src="" alt="" class="work_img">
+                <div class="work_card mix frontend">
+                    <img src="img/work3.jpg" alt="" class="work_img">
 
-                    <h3 class="work_title"></h3>
+                    <h3 class="work_title">Frontend</h3>
+
+                    <a href="#" class="work_button">
+                        Demo <i class='bx bx-right-arrow-alt work_icon'></i>
+                    </a>
+                </div>
+                <div class="work_card mix frontend">
+                    <img src="img/work4.jpg" alt="" class="work_img">
+
+                    <h3 class="work_title">Frontend</h3>
+
+                    <a href="#" class="work_button">
+                        Demo <i class='bx bx-right-arrow-alt work_icon'></i>
+                    </a>
+                </div>
+                <div class="work_card mix other">
+                    <img src="img/work5.jpg" alt="" class="work_img">
+
+                    <h3 class="work_title">Other</h3>
 
                     <a href="#" class="work_button">
                         Demo <i class='bx bx-right-arrow-alt work_icon'></i>
@@ -528,7 +528,7 @@
     <script src=""></script>
 
     <!-- ==== Mixitup Filter -->
-    <script src=""></script>
+    <script src="js/mixitup.min.js"></script>
 
     <!-- ==== Main JS -->
     <script type="text/javascript" src="js/index.js"></script>
