--- a/index.html
+++ b/index.html
@@ -509,7 +509,23 @@
         </section>
 
         <!-- ==== Testimonial ==== -->
-        <section class="testimonial section"></section>
+        <section class="testimonial section">
+            <span class="section_subtitle">My Clients Say</span>
+            <h2 class="section_title">Testimonial</h2>
+
+            <div class="testimonial_container container">
+                <div>
+                    <div class="testimonial_card">
+                        <img src="img/testimonial1.jpg" alt="" class="testimonial_img">
+
+                        <h3 class="testimonial_name">Angela</h3>
+                        <p class="testimonial_description">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptatum amet tempora quisquam, delectus eum laborum cupiditate expedita officia ratione. Numquam ex, quibusdam provident aliquid ea ipsam corrupti rerum. At!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- ==== Contact ==== -->
         <section class="contact section" id="contact"></section>
