testimonial section pt-2

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- Icons / Boxicon -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
+    <!-- Swiper CSS -->
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -513,14 +516,46 @@
             <span class="section_subtitle">My Clients Say</span>
             <h2 class="section_title">Testimonial</h2>
 
-            <div class="testimonial_container container">
+            <div class="testimonial_container container swiper">
                 <div>
                     <div class="testimonial_card">
                         <img src="img/testimonial1.jpg" alt="" class="testimonial_img">
 
                         <h3 class="testimonial_name">Angela</h3>
                         <p class="testimonial_description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptatum amet tempora quisquam, delectus eum laborum cupiditate expedita officia ratione. Numquam ex, quibusdam provident aliquid ea ipsam corrupti rerum. At!
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio facilis cupiditate beatae deleniti odio tempora.
+                        </p>
+                    </div>
+                    <div class="testimonial_card">
+                        <img src="img/testimonial2.jpg" alt="" class="testimonial_img">
+
+                        <h3 class="testimonial_name">Angela</h3>
+                        <p class="testimonial_description">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus itaque aliquid, at dolorum laborum delectus.
+                        </p>
+                    </div>
+                    <div class="testimonial_card">
+                        <img src="img/testimonial3.jpg" alt="" class="testimonial_img">
+
+                        <h3 class="testimonial_name">Angela</h3>
+                        <p class="testimonial_description">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod et impedit quas, veritatis ipsa similique.
+                        </p>
+                    </div>
+                    <div class="testimonial_card">
+                        <img src="img/testimonial4.jpg" alt="" class="testimonial_img">
+
+                        <h3 class="testimonial_name">Angela</h3>
+                        <p class="testimonial_description">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio consequatur soluta molestiae, enim in corrupti?
+                        </p>
+                    </div>
+                    <div class="testimonial_card">
+                        <img src="img/testimonial5.jpg" alt="" class="testimonial_img">
+
+                        <h3 class="testimonial_name">Angela</h3>
+                        <p class="testimonial_description">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quibusdam beatae quos maiores ea minima.
                         </p>
                     </div>
                 </div>
@@ -541,7 +576,7 @@
     <script src=""></script>
 
     <!-- ==== Swiper JS ==== -->
-    <script src=""></script>
+    <script src="js/swiper-bundle.min.js"></script>
 
     <!-- ==== Mixitup Filter -->
     <script src="js/mixitup.min.js"></script>
