fixing bug testimonial section

--- a/index.html
+++ b/index.html
@@ -516,46 +516,46 @@
             <span class="section_subtitle">My Clients Say</span>
             <h2 class="section_title">Testimonial</h2>
 
-            <div class="testimonial_container container swiper">
+            <div class="swiper testimonial_container container">
                 <div class="swiper-wrapper">
                     <div class="testimonial_card swiper-slide">
                         <img src="img/testimonial1.jpg" alt="" class="testimonial_img">
 
                         <h3 class="testimonial_name">Angela</h3>
                         <p class="testimonial_description">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio facilis cupiditate beatae deleniti odio tempora.
+                            "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio facilis cupiditate beatae deleniti odio tempora."
                         </p>
                     </div>
                     <div class="testimonial_card swiper-slide">
                         <img src="img/testimonial2.jpg" alt="" class="testimonial_img">
 
-                        <h3 class="testimonial_name">Angela</h3>
+                        <h3 class="testimonial_name">Anthony</h3>
                         <p class="testimonial_description">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus itaque aliquid, at dolorum laborum delectus.
+                            "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus itaque aliquid, at dolorum laborum delectus."
                         </p>
                     </div>
                     <div class="testimonial_card swiper-slide">
                         <img src="img/testimonial3.jpg" alt="" class="testimonial_img">
 
-                        <h3 class="testimonial_name">Angela</h3>
+                        <h3 class="testimonial_name">Marchel</h3>
                         <p class="testimonial_description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod et impedit quas, veritatis ipsa similique.
+                            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod et impedit quas. Lorem, ipsum dolor sit amet consectetur adipisicing."
                         </p>
                     </div>
                     <div class="testimonial_card swiper-slide">
                         <img src="img/testimonial4.jpg" alt="" class="testimonial_img">
 
-                        <h3 class="testimonial_name">Angela</h3>
+                        <h3 class="testimonial_name">Viona</h3>
                         <p class="testimonial_description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio consequatur soluta molestiae, enim in corrupti?
+                            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio consequatur soluta molestiae, enim in corrupti."
                         </p>
                     </div>
                     <div class="testimonial_card swiper-slide">
                         <img src="img/testimonial5.jpg" alt="" class="testimonial_img">
 
-                        <h3 class="testimonial_name">Angela</h3>
+                        <h3 class="testimonial_name">Jessica</h3>
                         <p class="testimonial_description">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quibusdam beatae quos maiores ea minima.
+                            "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore quibusdam beatae quos maiores ea minima."
                         </p>
                     </div>
                 </div>
