testimonial section pt-3

--- a/index.html
+++ b/index.html
@@ -517,8 +517,8 @@
             <h2 class="section_title">Testimonial</h2>
 
             <div class="testimonial_container container swiper">
-                <div>
-                    <div class="testimonial_card">
+                <div class="swiper-wrapper">
+                    <div class="testimonial_card swiper-slide">
                         <img src="img/testimonial1.jpg" alt="" class="testimonial_img">
 
                         <h3 class="testimonial_name">Angela</h3>
@@ -526,7 +526,7 @@
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio facilis cupiditate beatae deleniti odio tempora.
                         </p>
                     </div>
-                    <div class="testimonial_card">
+                    <div class="testimonial_card swiper-slide">
                         <img src="img/testimonial2.jpg" alt="" class="testimonial_img">
 
                         <h3 class="testimonial_name">Angela</h3>
@@ -534,7 +534,7 @@
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus itaque aliquid, at dolorum laborum delectus.
                         </p>
                     </div>
-                    <div class="testimonial_card">
+                    <div class="testimonial_card swiper-slide">
                         <img src="img/testimonial3.jpg" alt="" class="testimonial_img">
 
                         <h3 class="testimonial_name">Angela</h3>
@@ -542,7 +542,7 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod et impedit quas, veritatis ipsa similique.
                         </p>
                     </div>
-                    <div class="testimonial_card">
+                    <div class="testimonial_card swiper-slide">
                         <img src="img/testimonial4.jpg" alt="" class="testimonial_img">
 
                         <h3 class="testimonial_name">Angela</h3>
@@ -550,7 +550,7 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio consequatur soluta molestiae, enim in corrupti?
                         </p>
                     </div>
-                    <div class="testimonial_card">
+                    <div class="testimonial_card swiper-slide">
                         <img src="img/testimonial5.jpg" alt="" class="testimonial_img">
 
                         <h3 class="testimonial_name">Angela</h3>
@@ -559,6 +559,8 @@
                         </p>
                     </div>
                 </div>
+
+                <div class="swiper-pagination"></div>
             </div>
         </section>
 
