--- a/index.html
+++ b/index.html
@@ -565,7 +565,67 @@
         </section>
 
         <!-- ==== Contact ==== -->
-        <section class="contact section" id="contact"></section>
+        <section class="contact section" id="contact">
+            <span class="section_subtitle">Get In Touch</span>
+            <h2 class="section_title">Contact Me</h2>
+
+            <div class="contact_container container grid">
+                <div class="contact_content">
+                    <h3 class="contact_title">Talk To Me</h3>
+
+                    <div class="contact_info">
+                        <div class="contact_card">
+                            <i class='bx bx-mail-send contact_card-icon'></i>
+                            <h3 class="contact_card-title">Email</h3>
+                            <span class="contact_card-data">afifu5882@gmail.com</span>
+
+                            <a href="mailto:afifu5882@gmail.com" target="_blank" class="contact_button">
+                                Write Me <i class='bx bx-right-arrow-alt contact_button-icon' ></i>
+                            </a>
+                        </div>
+                        <div class="contact_card">
+                            <i class='bx bxl-whatsapp contact_card-icon' ></i>
+                            <h3 class="contact_card-title">Whatsapp</h3>
+                            <span class="contact_card-data">+62 897-5836-972</span>
+
+                            <a href="https://api.whatsapp.com/send?phone=628975836972&text=Hello Andev 😁, more information !!" target="_blank" class="contact_button">
+                                Write Me <i class='bx bx-right-arrow-alt contact_button-icon' ></i>
+                            </a>
+                        </div>
+                        <div class="contact_card">
+                            <i class='bx bxl-telegram contact_card-icon' ></i>
+                            <h3 class="contact_card-title">Telegram</h3>
+                            <span class="contact_card-data">afifudin23</span>
+
+                            <a href="https://t.me/afifudin23" target="_blank" class="contact_button">
+                                Write Me <i class='bx bx-right-arrow-alt contact_button-icon' ></i>
+                            </a>
+                        </div>
+                        
+                    </div>
+                </div>
+                <div class="contact_content">
+                    <h3 class="contact_title">Write Me Your Project</h3>
+
+                    <form action="" class="contact_form">
+                        <div class="contact_form-div">
+                            <label for="" class="contact_form-tag">Name</label>
+                            <input type="text" placeholder="Insert Your Name" class="contact_form-input">
+                        </div>
+                        <div class="contact_form-div">
+                            <label for="" class="contact_form-tag">Email</label>
+                            <input type="text" placeholder="Insert Your Email" class="contact_form-input">
+                        </div>
+                        <div class="contact_form-div">
+                            <label for="" class="contact_form-tag">Project</label>
+                            <textarea name="" id="" cols="30" rows="10" placeholder="Write Your Project" class="contact_form-input"></textarea>
+                        </div>
+
+                        <button class="button">Send Message</button>
+                    </form>
+                </div>
+            </div>
+        </section>
 
 
     </main>
