--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                             <label for="" class="contact_form-tag">Email</label>
                             <input type="text" placeholder="Insert Your Email" class="contact_form-input">
                         </div>
-                        <div class="contact_form-div">
+                        <div class="contact_form-div contact_form-area">
                             <label for="" class="contact_form-tag">Project</label>
                             <textarea name="" id="" cols="30" rows="10" placeholder="Write Your Project" class="contact_form-input"></textarea>
                         </div>
