--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </a>
                     </li>
                     <li class="nav_item">
-                        <a href="#user" class="nav_link">
+                        <a href="#about" class="nav_link">
                             <i class='bx bx-user'></i>
                         </a>
                     </li>
@@ -83,13 +83,13 @@
                     <img src="img/profile.png" class="home_img">
                 </div>
                 <div class="home_social">
-                    <a href="https://www.linkedin.com/in/afifudin-nurfalah-30a80b222" class="home_social-link">
+                    <a href="https://www.linkedin.com/in/afifudin-nurfalah-30a80b222" target="_blank" class="home_social-link">
                         <i class='bx bxl-linkedin-square'></i>
                     </a>
-                    <a href="https://github.com/afifudin23/" class="home_social-link">
+                    <a href="https://github.com/afifudin23/" target="_blank" class="home_social-link">
                         <i class='bx bxl-github'></i>
                     </a>
-                    <a href="https://www.instagram.com/affdn.nrflh23/" class="home_social-link">
+                    <a href="https://www.instagram.com/affdn.nrflh23/" target="_blank" class="home_social-link">
                         <i class='bx bxl-instagram-alt'></i>
                     </a>
                 </div>
@@ -512,7 +512,7 @@
         </section>
 
         <!-- ==== Testimonial ==== -->
-        <section class="testimonial section">
+        <section class="testimonial section" id="testimonial">
             <span class="section_subtitle">My Clients Say</span>
             <h2 class="section_title">Testimonial</h2>
 
@@ -626,14 +626,40 @@
                 </div>
             </div>
         </section>
-
-
     </main>
     
-    <footer class="footer" id="footer">
-
+    <!-- ==== Footer ==== -->
+    <footer class="footer">
+        <div class="footer_container container">
+            <h1 class="footer_title">AnDev</h1>
+            <ul class="footer_list">
+                <li>
+                    <a href="#about" class="footer_link">About</a>
+                </li>
+                <li>
+                    <a href="#work" class="footer_link">Projects</a>
+                </li>
+                <li>
+                    <a href="#testimonial" class="footer_link">Testimonial</a>
+                </li>
+            </ul>
+            <ul class="footer_social">
+                <a href="https://www.linkedin.com/in/afifudin-nurfalah-30a80b222" target="_blank" class="footer_social-link">
+                    <i class='bx bxl-linkedin-square'></i>
+                </a>
+                <a href="https://github.com/afifudin23/" target="_blank" class="footer_social-link">
+                    <i class='bx bxl-github'></i>
+                </a>
+                <a href="https://www.instagram.com/affdn.nrflh23/" target="_blank" class="footer_social-link">
+                    <i class='bx bxl-instagram-alt'></i>
+                </a>
+            </ul>
+            <span class="footer_copy">
+                &#169; AnDev, 2024. All Right Reserved
+            </span>
+        </div>
     </footer>
-
+    
     <!-- ==== Scrollreveal ==== -->
     <script src=""></script>
 
