--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         </section>
 
         <!-- ==== Services ==== -->
-        <section class="services section" id="services">
+        <section class="services section">
             <span class="section_subtitle">My Service</span>
             <h2 class="section_title">What I Offer</h2>
 
@@ -512,7 +512,7 @@
         </section>
 
         <!-- ==== Testimonial ==== -->
-        <section class="testimonial section" id="testimonial">
+        <section class="testimonial section">
             <span class="section_subtitle">My Clients Say</span>
             <h2 class="section_title">Testimonial</h2>
 
