--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
         </section>
 
         <!-- ==== Testimonial ==== -->
-        <section class="testimonial section">
+        <section class="testimonial section" id="testimonial">
             <span class="section_subtitle">My Clients Say</span>
             <h2 class="section_title">Testimonial</h2>
 
