breakpoints 280px pt-1

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="home_handle">
-                    <img src="img/profile.png" class="home_img">
+                    <img src="img/profile-img.png" class="home_img">
                 </div>
                 <div class="home_social">
                     <a href="https://www.linkedin.com/in/afifudin-nurfalah-30a80b222" target="_blank" class="home_social-link">
@@ -595,7 +595,7 @@
                         <div class="contact_card">
                             <i class='bx bxl-telegram contact_card-icon' ></i>
                             <h3 class="contact_card-title">Telegram</h3>
-                            <span class="contact_card-data">afifudin23</span>
+                            <span class="contact_card-data">@afifudin23</span>
 
                             <a href="https://t.me/afifudin23" target="_blank" class="contact_button">
                                 Write Me <i class='bx bx-right-arrow-alt contact_button-icon' ></i>
