--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
     </footer>
     
     <!-- ==== Scrollreveal ==== -->
-    <script src=""></script>
+    <script src="js/scrollreveal.min.js"></script>
 
     <!-- ==== Swiper JS ==== -->
     <script src="js/swiper-bundle.min.js"></script>
